test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidStaticnessSetInvalid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__setinvalid' should not be static
	static void __setinvalid() noexcept { }
}

// CHECK: 1 error generated.
